# Connect_4_Starter_Code

./: main.py  pyproject.toml
connectFour/: Alex.py  algorithm.py  andrew.py  annie.py  board.py  constants.py  evaluate.py  evaluate2.py  game.py  hillis.py  ian.py  jack.py  jake.py  krzysztof.py  macy.py  nathang.py  phillip.py  piece.py  ryan.py  simon.py  talia.py
