[tool.poetry]
name = "repl_pygame_Connect-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imparaai-checkers = "^1.4.2"
pygame = "^2.0.0"
constants = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
